--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                             <li> <a class="page-scroll" href="#resume"><i class="fa fa-file-text-o"></i>  <span> AGENDA </span></a></li>
                             <li> <a class="page-scroll" href="#portfolio"><i class="fa fa-picture-o"></i>  <span> NEGOCIOS </span></a></li>
                             <li> <a class="page-scroll" href="#blog"><i class="fa fa-comments"></i> <span> BLOG</span></a></li>
-                            <li> <a class="page-scroll" href="#
-				    "><i class="fa fa-map-marker"></i> <span> CONTACTO </span></a></li>
+                            <li> <a class="page-scroll" href="#contact"><i class="fa fa-map-marker"></i> <span> CONTACTO </span></a></li>
                         </ul> 
                         
                    	<!--Right Content -->
