--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                             </div>
                             <div class="col-md-12 page">
                             	<!-- Contact Form -->
-                            	<form class="col-md-6 contact-form"  method="post" action="contact.php" name="contactform" id="contactform">
+                            	<form class="col-md-6 contact-form"  method="post" action="http://www.isaacsuaste.me/contact.php" name="contactform" id="contactform">
                                 	<h2 class="section-title">Encantado de conocerte</h2>
                                     <!--Name-->
                                     <input id="name" name="name" class="form-inp requie" type="text" placeholder="Nombre"  />
